--- a/README
+++ b/README
@@ -3,4 +3,5 @@ http://alindeman.github.com/p2pu-rubyrails/week4.html
 
 Ribbet is a simple system for posting and rating web links.
 
-This application will eventually be pushed to Heroku.
+This application has been pushed to Heroku and can be
+viewed at http://freezing-galaxy-992.heroku.com/
