--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -34,6 +34,6 @@ en:
       confirmation_instructions:
         subject: 'Confirmation instructions'
       reset_password_instructions:
-        subject: 'Reset password instructions'
+        subject: 'Ribbit! Password Reset Instructions'
       unlock_instructions:
         subject: 'Unlock Instructions'
