--- a/README
+++ b/README
@@ -4,4 +4,4 @@ http://alindeman.github.com/p2pu-rubyrails/week4.html
 Ribbit is a simple system for posting and rating web links.
 
 This application has been pushed to Heroku and can be
-viewed at http://ribbit.heroku.com/
+viewed at http://ribbit.herokuapp.com/
